log/build_2025-01-19_23-42-18/antenna/stderr.log
  File "/home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna/strength.py", line 60
    self.pub.publish(msg
                    ^
SyntaxError: '(' was never closed

